# rufino-framework

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  upgrade.sh
cli/: rufino
docs/: README.md  applehealth-notes.md  architecture.md  bio-monthly-notes.md  cli-reference.md  concepts.md  digest-notes.md  embeddings-notes.md  gdrive-notes.md  getting-started.md  mcp-ask-rufino-notes.md  person-resolver-notes.md  philosophy.md  runtime.md  schema-fact-externo.md  schema-question.md  screentime-notes.md  spotify-notes.md  troubleshooting.md  upgrading.md  use-cases.md  whatsapp-notes.md  wizard.md  writing-adapters.md  year-review-notes.md
migrations/: 0.0.2-to-0.0.3.sh  0.0.3-to-0.1.0.sh  0.1.0-to-0.2.0.sh  0.2.1-to-0.3.0.sh  README.md
tests/: conftest.py  test_batch_committer.py  test_batch_consolidator.py  test_batch_converters.py  test_batch_dispatcher.py  test_batch_errors.py  test_batch_planner.py  test_batch_qa_pending.py  test_batch_retry.py  test_batch_runner.py  test_batch_runner_helper.py  test_batch_stager.py  test_batch_validator.py  test_batch_validator_compression.py  test_batch_worker_prompt.py  test_bootstrap_allowed_tools.py  test_cli.py  test_cli_enable_disable_embeddings.py  test_cli_ingest.py  test_cli_install_memory_loop.py  test_cli_output.py  test_cli_process.py  test_cli_process_batch.py  test_cli_qa_poll.py  test_cli_qa_poll_resumption.py  test_cli_scheduler.py  test_cli_wizard.py  test_embedder_cross_encoder.py  test_embedder_detect.py  test_embedder_ollama.py  test_foundation_smoke.py  test_helpers_v1.py  test_ingest_cursor.py  (+79 more)
(+272 files in other folders)
