[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rufino-framework"
version = "0.3.3"
description = "Meta-arquitectura A2P para dominios de conocimiento personal"
requires-python = ">=3.11"
authors = [{ name = "Valentino Errandonea" }]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "keyring>=24.0",
    "jinja2>=3.1",
    "mcp>=0.5",
    "mammoth>=1.6",
    "python-pptx>=0.6",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
rufino = "rufino.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
